--- a/app/views/questionnaires/index.html.erb
+++ b/app/views/questionnaires/index.html.erb
@@ -11,7 +11,9 @@
 
   <tbody>
     <% @questionnaires.each do |questionnaire| %>
+      
       <tr>
+        <td><%= questionnaire.nom %></td>
         <td><%= link_to 'Show', questionnaire %></td>
         <td><%= link_to 'Edit', edit_questionnaire_path(questionnaire) %></td>
         <td><%= link_to 'Destroy', questionnaire, method: :delete, data: { confirm: 'Are you sure?' } %></td>
