création questionnaire ok

--- a/app/views/questionnaires/show.html.erb
+++ b/app/views/questionnaires/show.html.erb
@@ -1,4 +1,7 @@
 <p id="notice"><%= notice %></p>
 
+     <h1><%= @questionnaire.nom %></h1>
+     <%= @questionnaire.question %></br>
+
 <%= link_to 'Edit', edit_questionnaire_path(@questionnaire) %> |
 <%= link_to 'Back', questionnaires_path %>
