--- a/app/views/questionnaires/_form.html.erb
+++ b/app/views/questionnaires/_form.html.erb
@@ -11,9 +11,14 @@
     </div>
   <% end %>
 
- <div class="field">
+<div class="field">
   <%= f.label :nom %></br> 
   <%= f.text_field :nom %>
+</div>
+
+<div class="field">
+  <%= f.label :question %></br> 
+  <%= f.text_area :question %>
 </div>
 
   <div class="actions">
