--- a/app/views/questionnaires/index.html.erb
+++ b/app/views/questionnaires/index.html.erb
@@ -14,6 +14,7 @@
       
       <tr>
         <td><%= questionnaire.nom %></td>
+        <td><%= questionnaire.question %></td>
         <td><%= link_to 'Show', questionnaire %></td>
         <td><%= link_to 'Edit', edit_questionnaire_path(questionnaire) %></td>
         <td><%= link_to 'Destroy', questionnaire, method: :delete, data: { confirm: 'Are you sure?' } %></td>
